--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@octokit/app": "^16.1.2",
     "@octokit/auth-app": "^8.1.2",
     "@octokit/rest": "^22.0.1",
+    "@openai/codex-sdk": "^0.89.0",
     "dotenv": "^17.2.3",
     "express": "^5.2.1"
   }
